--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -486,7 +486,7 @@ aside li {
 :root {
   --color-text: navy;
   --color-bg: #0115a8;
-  --color-bg-accent: #0115a8;
+  --color-bg-accent: transparent;
   --size: clamp(10rem, 1rem + 40vmin, 30rem);
   --gap: calc(var(--size) / 14);
   --duration: 60s;
@@ -507,6 +507,13 @@ aside li {
   overflow: hidden;
   user-select: none;
   gap: var(--gap);
+  mask-image: linear-gradient(
+    var(--mask-direction, to right),
+    hsl(0 0% 0% / 0),
+    hsl(0 0% 0% / 1) 20%,
+    hsl(0 0% 0% / 1) 80%,
+    hsl(0 0% 0% / 0)
+  );
 }
 
 .mask-gradient {
@@ -550,7 +557,7 @@ aside li {
 
 .marquee--reverse .marquee__group {
   animation-direction: reverse;
-  animation-delay: -3s;
+  animation-delay: calc(var(--duration) / -2);
 }
 
 @keyframes scroll-x {
@@ -670,4 +677,10 @@ aside li {
     opacity: 0;
     visibility: hidden;
   }
+}
+
+.marquee__group img {
+  max-width: clamp(10rem, 1rem + 28vmin, 20rem);
+  aspect-ratio: 1;
+  object-fit: cover;
 }
