--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -676,3 +676,59 @@ aside li {
     visibility: hidden;
   }
 }
+
+/*
+* --------------------------------------------------
+* SLick react
+* --------------------------------------------------
+*/
+
+.slick-track {
+  display: flex;
+}
+
+.content {
+  text-align: center;
+  margin-bottom: 30px;
+}
+.header {
+  font-size: 42px;
+}
+.img {
+  display: flex;
+  margin: 0 auto;
+  height: 40vh;
+  width: 80%;
+  border-radius: 5%;
+}
+.container {
+  margin: 0 auto;
+  width: 100%;
+  height: 80vh;
+  border-color: white;
+}
+.title {
+  margin-left: 50px;
+  width: 70%;
+  font-size: 30px;
+  padding: 20px;
+  border-radius: 5px;
+  font-size: 33px;
+}
+
+.slick-dots {
+  display: none !important;
+}
+
+.slick-prev {
+  left: -52px !important;
+}
+.slick-next:before,
+.slick-prev:before {
+  content: "" !important;
+}
+.next-slick-arrow,
+.prev-slick-arrow {
+  color: #000000;
+  font-size: 45px;
+}
