--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -685,48 +685,62 @@ aside li {
 
 .slick-track {
   display: flex;
+ 
+  
+  align-items: end;
+  justify-content: space-between;
+
+}
+
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .content {
   text-align: center;
   margin-bottom: 30px;
 }
-.header {
+/* .header {
   font-size: 42px;
-}
-.img {
-  display: flex;
-  margin: 0 auto;
-  height: 40vh;
-  width: 80%;
+} */
+/* .img {
+   height: 40vh; 
+  width: 100%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
   border-radius: 5%;
-}
+} */
 .container {
   margin: 0 auto;
   width: 100%;
   height: 80vh;
   border-color: white;
 }
-.title {
+/* .title {
   margin-left: 50px;
   width: 70%;
   font-size: 30px;
   padding: 20px;
   border-radius: 5px;
   font-size: 33px;
-}
+} */
 
 .slick-dots {
   display: none !important;
 }
 
-.slick-prev {
+/* .slick-prev {
   left: -52px !important;
-}
-.slick-next:before,
+} */
+
+/* .slick-next:before,
 .slick-prev:before {
   content: "" !important;
-}
+} */
 .next-slick-arrow,
 .prev-slick-arrow {
   color: #000000;
