minor changes and reordering

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -746,3 +746,11 @@ aside li {
   color: #000000;
   font-size: 45px;
 }
+
+
+/*
+* --------------------------------------------------
+* Carousel
+* --------------------------------------------------
+*/
+
