--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -804,6 +804,15 @@ aside li {
   background-color: var(--color-secondary);
 }
 
+/*
+* --------------------------------------------------
+* General
+* --------------------------------------------------
+*/
+
 .shadowing {
  box-shadow: 0px 4px 8px 1px rgba(0, 0, 0, 0.07), 0px 2px 4px 1px rgba(0, 0, 0, 0.07), 0px 1px 2px 1px rgba(0, 0, 0, 0.07);
+}
+.text-shadowing {
+  text-shadow: 1px 1px 0 rgba(0,0,0,.2)
 }
