--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -804,6 +804,31 @@ aside li {
   background-color: var(--color-secondary);
 }
 
+
+
+.mask-gradient-marquee-bottom {
+  mask-image: linear-gradient(
+    var(--mask-direction, to bottom),
+    hsl(0 0% 0% / 0),
+    hsl(0 0% 0% / 1) 20%,
+    hsl(0 0% 0% / 1) 80%,
+    hsl(0 0% 0% / 0)
+  );
+}
+.mask-gradient-marquee-right {
+  mask-image: linear-gradient(
+    var(--mask-direction, to right),
+    hsl(0 0% 0% / 0),
+    hsl(0 0% 0% / 1) 20%,
+    hsl(0 0% 0% / 1) 80%,
+    hsl(0 0% 0% / 0)
+  );
+}
+
+
+@media 
+
+
 /*
 * --------------------------------------------------
 * General
