--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -852,13 +852,13 @@ aside li {
 
 .service-details-bottom-wrapper h3 {
   line-height: 1.2em;
-  padding-top: 4rem;
+  padding-top: 1rem;
 }
 
 @media screen and (max-width: 500px){
-  .blog-grid {
+  /* .blog-grid {
     display: inline-block;
-  }
+  } */
   .list-wrapper {
     padding: 1rem;
   }
