--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -1,6 +1,10 @@
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Open Sans', sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, 'Segoe UI';
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+  font-variation-settings: 'wdth' 100;
   margin: 0;
   padding: 0;
 }
