--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -1,9 +1,10 @@
 body {
-  /* font-family: 'Open Sans', sans-serif, system-ui, -apple-system,
-    BlinkMacSystemFont, 'Segoe UI'; */
+  font-family: 'Open Sans', sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, 'Segoe UI';
   font-optical-sizing: auto;
-  font-weight: 200;
+  font-weight: normal;
   font-style: normal;
+  font-size: 16px;
   font-variation-settings: 'wdth' 100;
   margin: 0;
   padding: 0;
@@ -42,8 +43,9 @@ h5 {
 }
 
 p {
-  font-size: 1.125rem;
-  line-height: 1.4;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: normal;
 }
 
 a {
