--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -130,3 +130,7 @@ code {
   /* background-clip: padding-box, border-box; */
   background-origin: border-box;
 }
+
+.service-details-heading {
+  color: #fff;
+}
